--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   
   permission_handler: ^11.3.0
   http: ^1.0.0
+  file_picker: ^8.0.0+1   # For file picking functionality
+  csv: ^5.1.1 
+  jitsi_meet_flutter_sdk: ^10.3.0
   fluttertoast: ^8.2.12
   shimmer: ^3.0.0
   connectivity_plus: ^6.0.1
@@ -40,8 +43,15 @@ dependencies:
   provider: ^6.1.1 
   webview_flutter: ^4.10.0
   uuid: ^4.0.0
+  share_plus: ^7.2.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  path: ^1.8.3                    # Path utilities
+  
+  path_provider: ^2.1.1
+           
+
   cupertino_icons: ^1.0.8
  
   
